--- a/style.css
+++ b/style.css
@@ -15,3 +15,24 @@ a {
   padding: 5px 10px;
   border-radius: 100px;
 }
+
+.pen-tools {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  width: 60%;
+  margin: auto;
+}
+
+p {
+  text-align: center;
+}
+
+.fa-refresh {
+  margin-left: 10px;
+  background-color: red;
+  padding: 5px 10px;
+  border-radius: 100px;
+  color: white;
+  cursor: pointer;
+}
