--- a/style.css
+++ b/style.css
@@ -36,3 +36,16 @@ p {
   color: white;
   cursor: pointer;
 }
+
+.pen-size {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.board {
+  width: 800px;
+  margin: auto;
+}
