--- a/style.css
+++ b/style.css
@@ -49,3 +49,29 @@ p {
   width: 800px;
   margin: auto;
 }
+
+.drawing-colors {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.color-circle {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin-left: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.color-circle:nth-child(1) {
+  background-color: hotpink;
+}
+
+.color-circle:nth-child(2) {
+  background-color: orange;
+}
+
+.color-circle:nth-child(3) {
+  background-color: red;
+}
