--- a/style.css
+++ b/style.css
@@ -75,3 +75,24 @@ p {
 .color-circle:nth-child(3) {
   background-color: red;
 }
+
+.color-circle:nth-child(4) {
+  background-color: yellow;
+}
+.color-circle:nth-child(5) {
+  background-color: black;
+}
+.color-circle:nth-child(6) {
+  background-color: blue;
+}
+.color-circle:nth-child(7) {
+  background-color: white;
+}
+
+.color-circle:nth-child(8) {
+  background-color: green;
+}
+
+.active {
+  transform: scale(1.3);
+}
